--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=DB_URL
 spring.security.user.name=root
 spring.security.user.password=Rodriguez101628
 spring.datasource.dbcp2.driver-class-name=com.mysql.cj.jdbc.Driver
-
+jwt.secret=una_clave_secreta_muy_larga_y_segura_32
 # JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
@@ -13,7 +13,6 @@ spring.jpa.show-sql=true
 # Servidor
 server.port=8082
 server.servlet.context-path=/APItiendapesca
-
 
 
 
