env file loading

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,20 @@
 spring.application.name=APItiendapesca
 
-# Base de datos
-spring.datasource.url=jdbc:mysql://kraken-306a45a3-kraken1306-13f5.b.aivencloud.com:20837/Kraken_DB?sslMode=REQUIRED
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_NaP4mrizmSXd22Wszup
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JWT
-jwt.secret=una_clave_secreta_muy_larga_y_segura_32
+# Cambia JWT_SECRET a jwt.secret para que coincida
+jwt.secret=${JWT_SECRET}
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=validate 
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Servidor
-server.port=8082
+server.port=${SERVER_PORT:8082}
 server.servlet.context-path=/APItiendapesca
+
+spring.main.allow-circular-references=true
